[metadata]
name = iamport-rest-client
version = 0.9.0
author = PerhapsSPY
author_email = perhapsspy@gmail.com
description = REST client for I'mport;(http://www.iamport.kr)
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/iamport/iamport-rest-client-python
project_urls =
  Bug Tracker = https://github.com/iamport/iamport-rest-client-python/issues
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: Implementation :: CPython
  Programming Language :: Python :: Implementation :: PyPy
  Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
install_requires =
  requests==2.26.0

[options.extras_require]
dev =
  pytest==6.2.4
  pytest-cov==2.12.1
  flake8==4.0.1
  isort==5.9.3
  mypy==0.910
  types-requests==2.26.0

[options.packages.find]
exclude = tests

[options.package_data]
* = *.pyi

[flake8]
max-line-length = 79
exclude = .git,__pycache__,docs,build,dist,*.egg-info,*_cache,venv
max-complexity = 10
